# purple

./: .gitmodules  Dockerfile  Main.hs  Makefile  Maker.hs  Maker.lhs  Terminal.hs  Test.hs  UrnStageProperty.hs  default.nix  lhs2html  maker-logo.tex  maker.fmt  mkrfuzz.cabal  mkrfuzz.nix  preamble.fmt  truth.org
Maker/: Decimal.lhs  Makefile  Prelude.lhs
doc/: Dockerfile  index.html  maker.css  maker.js  purple.html
docs/: index.html  maker.css  maker.js
http/: dcs-server  index.html  index.js
