name:
  mkrfuzz
version:
  1.0.0
cabal-version:
  >= 1.18
license:
  GPL-3
build-type:
  Simple

library
  exposed-modules:
    Maker,
    Maker.Prelude,
    Maker.Decimal
  build-depends:
    aeson,
    bytestring,
    HUnit,
    QuickCheck,
    base < 5,
    containers,
    ghci-pretty,
    lens,
    mtl,
    wl-pprint-text,
    random,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text
  default-language:
    Haskell2010

executable mkrfuzz
  default-language:
    Haskell2010
  build-depends:
    aeson,
    bytestring,
    QuickCheck,
    base < 5,
    containers,
    ghci-pretty,
    lens,
    mkrfuzz,
    mtl,
    wl-pprint-text,
    random,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text
  main-is:
    Test.hs
  